--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -20,5 +20,56 @@
     background: #2098A8;
     color: #fff;
     text-decoration: none;
+    margin-left: 10px;
+  }
+}
+body {
+  padding: 0;
+  margin: 0;
+}
+#main-contents {
+  width: 100%;
+  height: 100vh;
+  &::after {
+    content: '.';
+    display: inline-block;
+    width: 0;
+    height: 0;
+    visibility: hidden;
+  }
+  .fl-box {
+    float: left;
+  }
+  .green-panel {
+    background: #59BB0C;
+    color: #ffffff;
+    text-align: center;
+    line-height: 100vh;
+    font-size: 25px;
+    font-weight: bold;
+  }
+}
+
+#form2 {
+  width: 450px;
+  height: 450px;
+  margin: 30px auto;
+  .input {
+    width: 400px;
+    height: 35px;
+  }
+  .label {
+    width: 400px;
+    height: 35px;
+    margin-top: 10px;
+  }
+  .submit {
+    margin-top: 10px;
+    margin-right: 45px;
+    width: 250px;
+    height: 35px;
+    background: #59BB0C;
+    color: #ffffff;
+    float: right;
   }
 }
