--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,4 +1,5 @@
 <div id="flbox">
 <!--  <div class="box-button">依頼フォーム</div>-->
-  <%= link_to "依頼フォーム", "/form-request", class: "box-button" %>
+  <%= link_to "create wiki", "/form-request", class: "box-button" %>
+  <%= link_to "search wiki", "/request-get", class:"box-button" %>
 </div>
