--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Login#index</h1>
-<p>Find me in app/views/login/index.html.erb</p>
+<div id="main-contents">
+  <div class="fl-box">
+    <form action="/login" method="post" id="form2">
+      <div class="label">ログインユーザ名</div>
+      <input type="text" name="uname" class="input">
+      <div class="label">パスワード</div>
+      <input type="text" name="password" class="input">
+      <input type="submit" value="LOGIN" class="submit">
+    </form>
+  </div>
+  <div class="fl-box green-panel">
+    well come to Design Plus!!!
+  </div>
+</div>
